--- a/03_Scripts_autoscaling_config.json
+++ b/03_Scripts_autoscaling_config.json
@@ -3,7 +3,7 @@
   "AutoScalingGroup": "lab-asg",
   "MinSize": 1,
   "MaxSize": 3,
-  "DesiredCapacity": 2,
+  "DesiredCapacity": 2, ## 최소 사이즈보다 크고 최대보다 작아야함
   "Cooldown": 10,
   "HealthCheckType": "ELB",
   "Metrics": {
@@ -11,3 +11,4 @@
     "Action": "scale_out"
   }
 }
+
